Chiinox/Shaman Rework (#5816)
* shaman rework

* playtest

* day 1 changes

* rework round 2 on strikes

* feedback fixes

* Pre-major changes

* adding ignition and all pre-passive changes

* passive style changes

* cosmetics and fixes

* ignition fix

* bug fixes

* flame totem rework chiinox edition

* fixes

* Massive restructuring in preparation for Spiritualism

* trigger tidying and flame totem visuals

* ignition drive dejank

* lightning totem rework and other fixes

* bug fixing some bugs

* split melee and projectile scaling

* import fixing

* decay totem revert

* Chain lightning fixes and variable renames

* totemic projection cleanup

* bug fix

* mostly done

* Spiritualism fixes

* ignition drive enhancement redesign

* hypothetically a tremor enhancement is done

* a couple of small bug fixes

* Tidied up some wording issues

* internal testing balance adjustments

* triggers done

* typos, bug fixes, and balance

* balance pass 1 beta tester feedback

* adjust strange projection behaviour

* some additional quick balance hotfix changes

* lightning totem description

* Ritual Power functionality, and moving away from spec passives for shaman

* spiritualism re-logic

* revert ritual power changes

* lightning and flame totem changes

* balance tweaks according to myself

* flame totem scaling revert to iteration 2

* a few small balance and wording tweaks

* basic code setup for spiritcatcher orbs and totemic consecration

* spiritcatcher orbs and totemic consecration ability descriptions

plus further structure for the abilities
non functional as of now

* orbs untested

* some consecration progress, orbs bugfixes

* consecration progress

* consecration is broken

* tweaks and fixes, orbs aint great still though

* orbs and consecration

* flame totem change & remove spec passives

* soothsayer rebalances post-passive removal

* hexbreaker rebalances post-passive removal

* some bug fixes

* balance tweaks

* consecration balance

* remove shoc